[tool.poetry]
name = "capston"
version = "0.1.0"
description = ""
authors = ["Mowlidharan <mowlidharanarumugam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
mysql-connector-python-rf = "^2.2.2"
streamlit = "^1.33.0"
plotly = "^5.21.0"
streamlit-option-menu = "^0.3.12"
nbformat = "^5.10.4"
geopandas = "^0.14.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
